<resources>
    <string name="app_name">Nature Observer</string>
    <string name="new_observation_button_text">New observation</string>
    <string name="new_observation_title_text">New Observation</string>
    <string name="map_title_text">Observation Locations</string>
    <string name="list_title_text">My Observations</string>
    <string name="item_title_text">Nature Observation</string>
    <string name="edit_title_text">Edit Observation Details</string>
    <string name="statistics_title_text">Observation Statistics</string>
    <string name="observation_title_edit_text_hint">Title</string>
    <string name="observation_description_edit_text_hint">Description</string>
    <string name="add_category_edit_text_hint">Add category</string>
    <string name="save_observation_button_text">Save observation</string>
    <string name="empty_title_edit_text_toast">Enter a title for the observation!</string>
    <string name="empty_category_edit_text_toast">Enter or select a category for the observation!</string>
    <string name="observation_deleted_toast">Observation deleted</string>
    <string name="delete_dialog_title">Delete nature observation</string>
    <string name="delete_dialog_text">Are you sure you want to delete this nature observation?</string>
    <string name="delete_text">Delete</string>
    <string name="cancel_text">Cancel</string>
    <string name="save_changes_button_text">Save changes</string>
    <string name="select_category_radio_button_text">Select category</string>
    <string name="add_category_radio_button_text">Add category</string>
    <string name="time_frame_filter_text">Filter by:</string>
    <string name="light_info">Light Info</string>
    <string name="nature_image">Nature Image</string>
    <string name="weather_icon">Weather icon</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="chart">Chart</string>
    <string name="date">date</string>
    <string name="category">Category: %s</string>

    <!-- For light sensor -->
    <string name="si_lux_units_m_s_2">SI lux units (m/s^2)</string>
    <string name="Lux">Lux</string>
    <string name="_0">0</string>
    <string name="light_meter">Light meter</string>
    <string name="Direct_sunlight">Direct sunlight</string>
    <string name="Full_daylight_but_not_direct_sun">Full daylight (not direct sun</string>
    <string name="Overcast_day_or_typical_TV_studio_lighting">Overcast day or typical TV studio lighting</string>
    <string name="Sunrise_or_sunset_on_a_clear_day">Sunrise or sunset on a clear day</string>
    <string name="Office_lighting">Office lighting</string>
    <string name="Train_station_platforms">"Train station platforms</string>
    <string name="Very_dark_overcast_day">Very dark overcast day</string>
    <string name="Darkness">Darkness</string>

    <!-- For weather view -->
    <string name="temperature_text">%s °C</string>
    <string name="place_name_country_text">%s, %s</string>
    <string name="pressure_text">Pressure: %s hPa</string>
    <string name="humidity_text">Humidity: %s %%</string>
    <string name="wind_speed_text">Wind speed: %s m/s</string>
    <string name="wind_direction_text">Wind direction: %s °</string>
    <string name="light_description_text">Light: %s</string>
    <string name="loading_text">Loading</string>
    <string name="add_title">add title</string>

    <!-- For accessibility -->
    <string name="observation_title">observation title</string>
    <string name="observation_date">observation date</string>
    <string name="observation_image">observation image</string>
    <string name="take_picture">take picture</string>
    <string name="logo">logo</string>
    <string name="backround_forest">backround forest</string>
    <string name="weather_info">weather info</string>
    <string name="temperature">temperature</string>
    <string name="description">description</string>
    <string name="city_and_country">city and country</string>
    <string name="pressure">pressure</string>
    <string name="humidity">humidity</string>
    <string name="wind_speed">wind speed</string>
    <string name="wind_direction">wind direction</string>
    <string name="observation_category">observation category</string>
    <string name="observation_information">observation information</string>
    <string name="observation_light">observation light</string>
    <string name="save_changes">save changes</string>
    <string name="add_category">add category</string>
    <string name="select_category">select category_from_list</string>
    <string name="select_time_period">select time period</string>
    <string name="select_category_or_add_new_one">select category or add new one</string>
    <string name="list_of_observations">list of observations</string>
    <string name="pie_chart_of_observations">pie chart of observations</string>
    <string name="statistics">Statistics</string>

</resources>