<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/weather_view_background"
    android:padding="4dp"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconImageView"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_margin="2dp"
                android:contentDescription="@string/weather_icon"
                tools:srcCompat="@drawable/ic_map_pin" />

            <TextView
                android:id="@+id/temperatureTextView"
                android:contentDescription="@string/temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="2dp"
                android:text="@string/loading_text"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:text="15 °C" />

        </LinearLayout>

        <TextView
            android:id="@+id/descriptionTextView"
            android:contentDescription="@string/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/loading_text"
            android:textSize="18sp"
            tools:text="broken clouds" />

        <TextView
            android:id="@+id/placeNameCountryTextView"
            android:contentDescription="@string/city_and_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/loading_text"
            android:textSize="16sp"
            tools:text="Helsinki, FI" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pressureTextView"
            android:contentDescription="@string/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/loading_text"
            android:textSize="14sp"
            tools:text="Pressure: 1032 hPa" />

        <TextView
            android:id="@+id/humidityTextView"
            android:contentDescription="@string/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/loading_text"
            android:textSize="14sp"
            tools:text="Humidity: 64 %" />

        <TextView
            android:id="@+id/windSpeedTextView"
            android:contentDescription="@string/wind_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/loading_text"
            android:textSize="14sp"
            tools:text="Wind speed: 0.45 m/s" />

        <TextView
            android:id="@+id/windDirectionTextView"
            android:contentDescription="@string/wind_direction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:text="@string/loading_text"
            android:textSize="14sp"
            tools:text="Wind direction: 179 °" />
    </LinearLayout>

</LinearLayout>