<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ListFragment">

    <ImageView
        android:id="@+id/bRimageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/backround_forest"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/natureimg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/listSpinner"
        android:layout_width="180dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/select_category"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/timeFrameFilterSpinner"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/select_time_period"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_obs_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/list_of_observations"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>