<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.NewObservationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/observationImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="24dp"
            android:contentDescription="@string/nature_image"
            app:layout_constraintBottom_toTopOf="@+id/observationTitleEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/observationTitleEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:ems="10"
            android:hint="@string/observation_title_edit_text_hint"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            app:layout_constraintBottom_toTopOf="@+id/categorySelectLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent" />

        <LinearLayout
            android:id="@+id/categorySelectLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="8dp"
            android:background="@color/light_gray_background"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/observationDescriptionEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent">

            <RadioGroup
                android:id="@+id/categoryOptionRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/selectCategoryRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:checked="true"
                    android:text="@string/select_category_radio_button_text" />

                <RadioButton
                    android:id="@+id/addCategoryRadioButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/add_category_radio_button_text" />
            </RadioGroup>

            <Spinner
                android:id="@+id/observationCategorySpinner"
                android:layout_width="160dp"
                android:layout_height="44dp" />

            <EditText
                android:id="@+id/addCategoryEditText"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:ems="10"
                android:hint="@string/add_category_edit_text_hint"
                android:importantForAutofill="no"
                android:inputType="textCapSentences"
                android:visibility="gone" />

        </LinearLayout>

        <EditText
            android:id="@+id/observationDescriptionEditText"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/observation_description_edit_text_hint"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            android:importantForAutofill="no"
            app:layout_constraintBottom_toTopOf="@+id/saveObservationButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/saveObservationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:enabled="false"
            android:text="@string/save_observation_button_text"
            app:icon="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>